--- a/src/base/1.typescript/1.index.md
+++ b/src/base/1.typescript/1.index.md
@@ -8,11 +8,7 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# Vue 中使用 TypeScript
-
-::: tip 前言
-后续以 vue3.x 相关源码来分析
-:::
+# TypeScript
 
 ## 1.环境配置
 
