--- a/src/base/1.typescript/1.env.md
+++ b/src/base/1.typescript/1.env.md
@@ -8,34 +8,49 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 一.环境配置
+# 一.内置对象
 
-## 1.ts 手动编译
+## 1.ECMAScript 的内置对象
 
-- 安装依赖
+```ts
+//Array用于表示和操作数组
+let numbers: number[] = [1, 2, 3, 4, 5];
+let numbers: Array<number> = [1, 2, 3, 4, 5];
 
-```sh
-npm install -g typescript
+
+//Date 对象用于处理日期和时间
+let now: Date = new Date("2023-12-19");
+console.log(now);
+
+
+//Map对象是一种类似字典的数据结构，用于存储键值对
+const map1:Map<string,number> = new Map();
+map1.set('a', 1);
+
+
+//Set 对象是一种集合，允许存储不重复的值
+const a:Set<number> = new Set([1, 2, 3]);
+
+
+//RegExp用于处理正则表达式
+let pattern: RegExp = /hello/;
+let text: string = "Hello, World!";
+console.log(pattern.test(text)); // false
+
+
+//Error 对象用于表示在运行时发生的错误
+let e: Error = new Error('Error occurred');
 ```
 
-- 文件转换
+## 2.BOM、DOM 内置对象
 
-```sh
-tsc helloworld.ts
+DOM 和 BOM 内置对象包含 Document，Element，Event，NodeList 等
+
+```ts
+const img: HTMLImageElement = document.querySelector("img")!
+const img2: HTMLImageElement = document.querySelector("img") as HTMLImageElement
+const imgList: NodeListOf<HTMLImageElement> = document.querySelectorAll("img")
+document.addEventListener("click", (event: MouseEvent) => {
+  console.log(event)
+})
 ```
-
-## 2.ts 自动编译
-
-- 1.创建 tsconfig.json 文件 tsc --init 生成配置文件
-
-- 2.点击 vscode 菜单 任务-运行任务 点击 tsc:监视-tsconfig.json 然后就可以自动生成代码了
-
-## 3.hbuilder 中
-
-- 1.在最上方菜单栏，点击工具-插件安装；
-
-- 2.点击下方浏览 Eclipse 插件市场，搜索 typescript 插件进行安装
-
-- 3.安装完成后重启编译器，点击菜单栏工具-选项选择编译 ts 文件
-
-- 4.在你的项目上右键点击--配置--Enable TypeScript Builder，之后你再保存.ts 文件时会自动在当前目录编译出对应的.js 文件，在 Compile all TypeScript files on build 进行打勾，然后确定；
