--- a/src/base/1.typescript/19.extend.md
+++ b/src/base/1.typescript/19.extend.md
@@ -10,25 +10,65 @@ meta:
 
 # 十九.扩展全局变量类型
 
+::: tip 前言
+
+- .ts/.tsx 文件：可以使用 declare global
+- .d.ts 文件：任何内容都会自动进入全局作用域,它还允许您将全局定义放在单独的文件中
+- 单模块覆盖:declare const window
+
+:::
+
 ## 1.扩展局部变量
 
 可以直接使用接口对已有的类型进行扩展
 
-```ts
-interface String {
-  double(): string;
-}
-String.prototype.double = function () {
-  return (this as string) + this;
-};
-let str = "abc";
-```
+### 1.1 String
+
+- 定义类型
 
 ```ts
-interface Window {
-  myname: string;
+// global.d.ts
+interface String {
+  double(): string
 }
-console.log(window.myname);
+```
+
+- 扩展原型方法
+
+```ts
+String.prototype.double = function () {
+  return (this as string) + this
+}
+```
+
+- 使用
+
+```ts
+let str: string = "abc"
+str.double()
+```
+
+### 1.2 window
+
+- 定义类型
+
+```ts
+// global.d.ts
+interface Window {
+  myname: string
+}
+```
+
+- 扩展属性
+
+```ts
+window.myname = "asdasdfasdfasd"
+```
+
+- 使用
+
+```ts
+console.log(window.myname)
 ```
 
 ## 2.模块内全局扩展
@@ -36,10 +76,10 @@ console.log(window.myname);
 ```ts
 declare global {
   interface String {
-    double(): string;
+    double(): string
   }
   interface Window {
-    myname: string;
+    myname: string
   }
 }
 ```
@@ -54,12 +94,12 @@ declare global {
 
 ```ts
 interface Animal {
-  name: string;
+  name: string
 }
 interface Animal {
-  age: number;
+  age: number
 }
-let a: Animal = { name: "abcd", age: 10 };
+let a: Animal = { name: "abcd", age: 10 }
 ```
 
 ### 3.命名空间的合并
@@ -69,7 +109,7 @@ let a: Animal = { name: "abcd", age: 10 };
 ```ts
 class Form {}
 namespace Form {
-  export const type = "form";
+  export const type = "form"
 }
 ```
 
@@ -78,7 +118,7 @@ namespace Form {
 ```ts
 function getName() {}
 namespace getName {
-  export const type = "form";
+  export const type = "form"
 }
 ```
 
@@ -90,19 +130,19 @@ enum Seasons {
   Summer = "Summer",
 }
 namespace Seasons {
-  export let Autum = "Autum";
-  export let Winter = "Winter";
+  export let Autum = "Autum"
+  export let Winter = "Winter"
 }
 ```
 
 ### 3.交叉类型合并
 
 ```ts
-import { createStore, Store } from "redux";
+import { createStore, Store } from "redux"
 type StoreWithExt = Store & {
-  ext: string;
-};
-let store: StoreWithExt;
+  ext: string
+}
+let store: StoreWithExt
 ```
 
 ## 4.生成声明文件
