--- a/src/base/1.typescript/2.base.md
+++ b/src/base/1.typescript/2.base.md
@@ -10,30 +10,79 @@ meta:
 
 # 二.基础类型
 
-## 1.Boolean、Number、String
+## 1.基本类型
+
+- Boolean
 
 ```ts
-let bool: boolean = true;
-let num: number = 10;
-let str: string = "hello";
+let bool: boolean = true
 ```
 
-## 2.Tuple
-
-限制长度个数、类型一一对应
+- Number
 
 ```ts
-let tuple: [string, number, boolean] = ["hello", 10, true];
-tuple.push("abc"); //在元组中增加数据，只能增加元组中存放的类型
+let num: number = 10
+```
+
+- String
+
+```ts
+let str: string = "hello"
+```
+
+- Null
+
+任何类型的子类型，如果`strictNullChecks`的值为 true，则不能把 null 和 undefined 付给其他类型
+
+```ts
+let name: null | boolean
+name = null
+```
+
+- Undefined
+
+任何类型的子类型，如果`strictNullChecks`的值为 true，则不能把 null 和 undefined 付给其他类型
+
+```ts
+let name: null | boolean
+name = boolean
+```
+
+## 2.Object
+
+```ts
+let obj: { a: number; b: number } = { a: 1, b: 2 }
 ```
 
 ## 3.Array
 
+### 3.1 固定长度类型
+
+- 元组类型（tuple）：表示已知元素数量和类型的数组
+
 ```ts
-let arr1: number[] = [1, 2, 3];
-let arr2: string[] = ["1", "2", "3"];
-let arr3: (number | string)[] = [1, "2", 3];
-let arr4: Array<number | string> = [1, "2", 3]; //使用泛型方式来声明
+let tuple: [string, number, boolean] = ["hello", 10, true]
+tuple.push("abc") //在元组中增加数据，只能增加元组中存放的类型
+```
+
+### 3.2 固定类型
+
+```ts
+let arr1: number[] = [1, 2, 3]
+let arr2: string[] = ["1", "2", "3"]
+let arr3: (number | string)[] = [1, "2", 3]
+```
+
+### 3.3 不定长度类型
+
+- 使用泛型方式来声明
+
+```ts
+let arr: Array<T> = [1, 2, 3]
+```
+
+```ts
+let arr4: Array<number | string> = [1, "2", 3]
 ```
 
 ## 4.Enum
@@ -77,36 +126,35 @@ const enum USER_ROLE {
 不进行类型检测
 
 ```ts
-let arr: any = ["abc", true, { name: "123" }];
+let arr: any = ["abc", true, { name: "123" }]
 ```
 
-## 6.Null 和 Undefined
-
-任何类型的子类型，如果`strictNullChecks`的值为 true，则不能把 null 和 undefined 付给其他类型
+## 6.Unknown
 
 ```ts
-let name: null | boolean;
-name = null;
+let value: unknown
+value = true // OK
+value = 42 // OK
 ```
 
-## 7.Void 类型
+## 7.Void
 
 只能接受 null，undefined。一般用于函数的返回值
 
 ```ts
-let a: void;
-a = undefined;
+let a: void
+a = undefined
 ```
 
 严格模式下不能将`null`赋予给 void
 
-## 8.Never 类型
+## 8.Never
 
 任何类型的子类型，never 代表不会出现的值。不能把其他类型赋值给 never
 
 ```ts
 function error(message: string): never {
-  throw new Error("err");
+  throw new Error("err")
 }
 function loop(): never {
   while (true) {}
@@ -115,34 +163,34 @@ function fn(x: number | string) {
   if (typeof x === "number") {
   } else if (typeof x === "string") {
   } else {
-    console.log(x); //never
+    console.log(x) //never
   }
 }
 ```
 
-## 9.Symbol 类型
+## 9.Symbol
 
 Symbol 表示独一无二
 
 ```ts
-const s1 = Symbol("key");
-const s2 = Symbol("key");
-console.log(s1 === s2);
+const s1 = Symbol("key")
+const s2 = Symbol("key")
+console.log(s1 === s2)
 ```
 
-## 10.BigInt 类型
+## 10.BigInt
 
 ```ts
-const num1 = Number.MAX_SAFE_INTEGER + 1;
-const num2 = Number.MAX_SAFE_INTEGER + 2;
-console.log(num1 === num2); // true
-let max: bigint = BigInt(Number.MAX_SAFE_INTEGER);
-console.log(max + BigInt(1) === max + BigInt(2));
+const num1 = Number.MAX_SAFE_INTEGER + 1
+const num2 = Number.MAX_SAFE_INTEGER + 2
+console.log(num1 === num2) // true
+let max: bigint = BigInt(Number.MAX_SAFE_INTEGER)
+console.log(max + BigInt(1) === max + BigInt(2))
 ```
 
 number 类型和 bigInt 类型是不兼容的
 
-## 11.Object 对象类型
+## 11.Object
 
 object 表示非原始类型
 
@@ -152,12 +200,4 @@ create(())
 create({})
 create([])
 create(function(){})
-```
-
-## 12.Unknown
-
-```ts
-let value: unknown;
-value = true; // OK
-value = 42; // OK
 ```
