--- a/src/base/1.typescript/1.index.md
+++ b/src/base/1.typescript/1.index.md
@@ -12,6 +12,32 @@ meta:
 
 ## 1.环境配置
 
+### 1.1 ts 手动编译
+
+- 安装依赖
+
+```sh
+npm install -g typescript
+```
+
+- 文件转换
+
+```sh
+tsc helloworld.ts
+```
+
+### 1.2 ts 自动编译
+
+- 1.创建 tsconfig.json 文件 tsc --init 生成配置文件
+- 2.点击 vscode 菜单 任务-运行任务 点击 tsc:监视-tsconfig.json 然后就可以自动生成代码了
+
+### 1.3 hbuilder 中
+
+- 1.在最上方菜单栏，点击工具-插件安装；
+- 2.点击下方浏览 Eclipse 插件市场，搜索 typescript 插件进行安装
+- 3.安装完成后重启编译器，点击菜单栏工具-选项选择编译 ts 文件
+- 4.在你的项目上右键点击--配置--Enable TypeScript Builder，之后你再保存.ts 文件时会自动在当前目录编译出对应的.js 文件，在 Compile all TypeScript files on build 进行打勾，然后确定；
+
 ## 2.基础类型
 
 ## 3.类型推导
