--- a/src/base/1.typescript/18.statement.md
+++ b/src/base/1.typescript/18.statement.md
@@ -12,11 +12,13 @@ meta:
 
 ## 1.声明全局变量
 
-- 普通类型声明
+### 1.1 普通类型声明
+
+- xxx.d.ts
 
 ```ts
-declare let age: number;
-declare function sum(a: string, b: string): void;
+declare let age: number
+declare function sum(a: string, b: string): void
 declare class Animal {}
 declare const enum Seaons {
   Spring,
@@ -25,8 +27,8 @@ declare const enum Seaons {
   Winter,
 }
 declare interface Person {
-  name: string;
-  age: number;
+  name: string
+  age: number
 }
 ```
 
@@ -36,23 +38,26 @@ declare interface Person {
 
 ```ts
 declare const $: (selector: string) => {
-  height(num?: number): void;
-  width(num?: number): void;
-};
-$("").height();
+  height(num?: number): void
+  width(num?: number): void
+}
 ```
 
-- 命名空间声明
+```ts
+$("target").height()
+```
+
+### 1.2 命名空间声明
 
 ```ts
 declare namespace jQuery {
-  function ajax(url: string, options: object): void;
+  function ajax(url: string, options: object): void
   namespace fn {
-    function extend(obj: object): void;
+    function extend(obj: object): void
   }
 }
-jQuery.ajax("/", {});
-jQuery.fn.extend({});
+jQuery.ajax("/", {})
+jQuery.fn.extend({})
 ```
 
 namespace 表示一个全局变量，包含很多子属性，命名空间内部不需要使用 declare 声明属性或方法
@@ -89,47 +94,47 @@ declare namespace jQuery {
 ```
 
 ```ts
-declare function jQuery(selector: string): HTMLElement;
+declare function jQuery(selector: string): HTMLElement
 declare namespace jQuery {
-  function ajax(url: string): void;
+  function ajax(url: string): void
 }
-export = jQuery;
+export = jQuery
 ```
 
 - events 模块声明文件
 
 ```ts
-import { EventEmitter } from "events";
-var e = new EventEmitter();
+import { EventEmitter } from "events"
+var e = new EventEmitter()
 e.on("message", function (text) {
-  console.log(text);
-});
-e.emit("message", "hello");
+  console.log(text)
+})
+e.emit("message", "hello")
 ```
 
 ```ts
-export type Listener = (...args: any[]) => void;
-export type Type = string | symbol;
+export type Listener = (...args: any[]) => void
+export type Type = string | symbol
 
 export class EventEmitter {
-  static defaultMaxListeners: number;
-  emit(type: Type, ...args: any[]): boolean;
-  addListener(type: Type, listener: Listener): this;
-  on(type: Type, listener: Listener): this;
-  once(type: Type, listener: Listener): this;
+  static defaultMaxListeners: number
+  emit(type: Type, ...args: any[]): boolean
+  addListener(type: Type, listener: Listener): this
+  on(type: Type, listener: Listener): this
+  once(type: Type, listener: Listener): this
 }
 ```
 
 ## 4.模块导入导出
 
 ```ts
-import $ from "jquery"; // 只适用于 export default $
+import $ from "jquery" // 只适用于 export default $
 
-const $ = require("jquery"); // 没有声明文件可以直接使用 require语法
+const $ = require("jquery") // 没有声明文件可以直接使用 require语法
 
-import * as $ from "jquery"; // 为了支持 Commonjs规范 和 AMD规范 导出时采用export = jquery
+import * as $ from "jquery" // 为了支持 Commonjs规范 和 AMD规范 导出时采用export = jquery
 
-import $ = require("jquery"); // export = jquery 在commonjs规范中使用
+import $ = require("jquery") // export = jquery 在commonjs规范中使用
 ```
 
 ## 5.第三方声明文件
