--- a/src/base/1.typescript/1.env.md
+++ b/src/base/1.typescript/1.env.md
@@ -14,32 +14,27 @@ meta:
 
 ```ts
 //Array用于表示和操作数组
-let numbers: number[] = [1, 2, 3, 4, 5];
-let numbers: Array<number> = [1, 2, 3, 4, 5];
-
+let numbers: number[] = [1, 2, 3, 4, 5]
+let numbers: Array<number> = [1, 2, 3, 4, 5]
 
 //Date 对象用于处理日期和时间
-let now: Date = new Date("2023-12-19");
-console.log(now);
-
+let now: Date = new Date("2023-12-19")
+console.log(now)
 
 //Map对象是一种类似字典的数据结构，用于存储键值对
-const map1:Map<string,number> = new Map();
-map1.set('a', 1);
-
+const map1: Map<string, number> = new Map()
+map1.set("a", 1)
 
 //Set 对象是一种集合，允许存储不重复的值
-const a:Set<number> = new Set([1, 2, 3]);
-
+const a: Set<number> = new Set([1, 2, 3])
 
 //RegExp用于处理正则表达式
-let pattern: RegExp = /hello/;
-let text: string = "Hello, World!";
-console.log(pattern.test(text)); // false
-
+let pattern: RegExp = /hello/
+let text: string = "Hello, World!"
+console.log(pattern.test(text)) // false
 
 //Error 对象用于表示在运行时发生的错误
-let e: Error = new Error('Error occurred');
+let e: Error = new Error("Error occurred")
 ```
 
 ## 2.BOM、DOM 内置对象
