--- a/src/base/1.typescript/17.module.md
+++ b/src/base/1.typescript/17.module.md
@@ -10,7 +10,9 @@ meta:
 
 # 十七.模块和命名空间
 
+::: tip 前言
 默认情况下，我们编写的大门处于全局命名空间中
+:::
 
 ## 1.模块
 
@@ -34,22 +36,22 @@ import name from './a'
 export namespace zoo {
   export class Dog {
     eat() {
-      console.log("zoo dog");
+      console.log("zoo dog")
     }
   }
 }
 export namespace home {
   export class Dog {
     eat() {
-      console.log("home dog");
+      console.log("home dog")
     }
   }
 }
 
-let dog_of_zoo = new zoo.Dog();
-dog_of_zoo.eat();
-let dog_of_home = new home.Dog();
-dog_of_home.eat();
+let dog_of_zoo = new zoo.Dog()
+dog_of_zoo.eat()
+let dog_of_home = new home.Dog()
+dog_of_home.eat()
 ```
 
 - 命名空间嵌套使用
