--- a/src/base/1.typescript/6.interface.md
+++ b/src/base/1.typescript/6.interface.md
@@ -21,23 +21,23 @@ const fullName = ({
   firstName,
   lastName,
 }: {
-  firstName: string;
-  lastName: string;
+  firstName: string
+  lastName: string
 }): string => {
-  return firstName + lastName;
-};
+  return firstName + lastName
+}
 ```
 
 我们可以约束函数中的参数，但是类型无法复用
 
 ```ts
 interface FullName {
-  firstName: string;
-  lastName: string;
+  firstName: string
+  lastName: string
 }
 const fullName = ({ firstName, lastName }: FullName): string => {
-  return firstName + lastName;
-};
+  return firstName + lastName
+}
 ```
 
 我们可以通过接口进行描述
@@ -46,15 +46,15 @@ const fullName = ({ firstName, lastName }: FullName): string => {
 
 ```ts
 interface FullName {
-  firstName: string;
-  lastName: string;
+  firstName: string
+  lastName: string
 }
 interface Fn {
-  (obj: FullName): string;
+  (obj: FullName): string
 }
 const fullName: Fn = ({ firstName, lastName }) => {
-  return firstName + lastName;
-};
+  return firstName + lastName
+}
 ```
 
 通过接口限制函数的参数类型和返回值类型
@@ -63,17 +63,17 @@ const fullName: Fn = ({ firstName, lastName }) => {
 
 ```ts
 interface Counter {
-  (): number; //限制函数类型
-  count: 0; //限制函数上的属性
+  (): number //限制函数类型
+  count: 0 //限制函数上的属性
 }
 let fn: any = () => {
-  fn.count++;
-  return fn.count;
-};
-fn.count = 0;
-let counter: Counter = fn;
-console.log(counter());
-console.log(counter());
+  fn.count++
+  return fn.count
+}
+fn.count = 0
+let counter: Counter = fn
+console.log(counter())
+console.log(counter())
 ```
 
 ## 4.对象接口
@@ -82,19 +82,19 @@ console.log(counter());
 
 ```ts
 interface Vegetables {
-  readonly color: string;
-  size: string;
+  readonly color: string
+  size: string
 }
 interface Vegetables {
-  age?: number;
-  taste: "sour" | "sweet";
+  age?: number
+  taste: "sour" | "sweet"
 }
 const tomato: Vegetables = {
   color: "red",
   size: "10",
   taste: "sour",
-};
-tomato.color = "green"; //仅读属性不能进行修改
+}
+tomato.color = "green" //仅读属性不能进行修改
 ```
 
 ？标识的属性为可选属性，`readOnly`标识的属性则不能修改。多个同名的接口会自动合并
@@ -105,35 +105,35 @@ const tomato: Vegetables = {
   size: "10",
   taste: "sour",
   type: "蔬菜",
-} as Vegetables; //多余的属性可以使用类型断言
+} as Vegetables //多余的属性可以使用类型断言
 ```
 
 ## 5.任意属性、可索引接口
 
 ```ts
 interface Person {
-  name: "string";
-  [key: string]: any;
+  name: "string"
+  [key: string]: any
 }
 let p: Person = {
   name: "zhufeng",
   age: 10,
   [Symbol()]: "aaaa",
-};
+}
 ```
 
 任意属性可以对某一部分必填属性做限制，其余可以随意增减
 
 ```ts
 interface Arr {
-  [key: number]: any;
+  [key: number]: any
 }
 let p: Arr = {
   0: "1",
   1: "2",
   3: "3",
-};
-let arr: Arr = [1, "d", "c"];
+}
+let arr: Arr = [1, "d", "c"]
 ```
 
 可索引接口可以用于标识数组
@@ -163,17 +163,17 @@ class Speak implements Speakable,ChineseSpeakable{
 
 ```ts
 interface Speakable {
-  speak(): void;
+  speak(): void
 }
 interface SpeakChinese extends Speakable {
-  speakChinese(): void;
+  speakChinese(): void
 }
 class Speak implements SpeakChinese {
   speakChinese(): void {
-    throw new Error("Method not implemented.");
+    throw new Error("Method not implemented.")
   }
   speak(): void {
-    throw new Error("Method not implemented.");
+    throw new Error("Method not implemented.")
   }
 }
 ```
@@ -238,34 +238,34 @@ export function createHydrationFunctions(
 
 ```ts
 interface Type {
-  new (name: string): any;
+  new (name: string): any
 }
 function createType(target: Type, name: string) {
-  return new target(name); // 传入的是一个构造函数
+  return new target(name) // 传入的是一个构造函数
 }
 class Animal {
   constructor(public name: string) {
-    this.name = name;
+    this.name = name
   }
 }
-let r = createType(Animal, "Tom");
+let r = createType(Animal, "Tom")
 ```
 
 这里无法标识返回值类型
 
 ```ts
 interface Type<T> {
-  new (name: string): T;
+  new (name: string): T
 }
 function createType<T>(target: Type<T>, name: string): T {
-  return new target(name);
+  return new target(name)
 }
 class Animal {
   constructor(public name: string) {
-    this.name = name;
+    this.name = name
   }
 }
-let r = createType(Animal, "Tom");
+let r = createType(Animal, "Tom")
 ```
 
 new()表示当前是一个构造数类型，这里捎带使用了下泛型。在使用`createClass`时动态传入类型。
