--- a/src/base/1.typescript/2.base.md
+++ b/src/base/1.typescript/2.base.md
@@ -12,19 +12,33 @@ meta:
 
 ## 1.基本类型
 
-- Boolean
+## 布尔类型
 
 ```ts
-let bool: boolean = true
+let status: boolean = true
 ```
+
+## 数值类型
 
 - Number
 
 ```ts
-let num: number = 10
+let count: number = 10
 ```
 
-- String
+- BigInt
+
+```ts
+const num1 = Number.MAX_SAFE_INTEGER + 1
+const num2 = Number.MAX_SAFE_INTEGER + 2
+console.log(num1 === num2) // true
+let max: bigint = BigInt(Number.MAX_SAFE_INTEGER)
+console.log(max + BigInt(1) === max + BigInt(2))
+```
+
+number 类型和 bigInt 类型是不兼容的
+
+## 字符串
 
 ```ts
 let str: string = "hello"
@@ -177,18 +191,6 @@ const s1 = Symbol("key")
 const s2 = Symbol("key")
 console.log(s1 === s2)
 ```
-
-## 10.BigInt
-
-```ts
-const num1 = Number.MAX_SAFE_INTEGER + 1
-const num2 = Number.MAX_SAFE_INTEGER + 2
-console.log(num1 === num2) // true
-let max: bigint = BigInt(Number.MAX_SAFE_INTEGER)
-console.log(max + BigInt(1) === max + BigInt(2))
-```
-
-number 类型和 bigInt 类型是不兼容的
 
 ## 11.Object
 
