--- a/src/base/1.typescript/2.base.md
+++ b/src/base/1.typescript/2.base.md
@@ -10,67 +10,137 @@ meta:
 
 # 二.基础类型
 
-## 1.基本类型
+## 1.布尔类型
 
-## 布尔类型
+- 编译前
 
-```ts
-let status: boolean = true
-```
+<<< @/src/base/1.typescript/2.1.ts
 
-## 数值类型
+- 编译后
+
+<<< @/src/base/1.typescript/2.1.js
+
+## 2.数值类型
 
 - Number
 
-```ts
-let count: number = 10
-```
+  - 编译前
+
+  <<< @/src/base/1.typescript/2.2.1.ts
+
+  - 编译后
+
+  <<< @/src/base/1.typescript/2.2.1.js
 
 - BigInt
 
-```ts
-const num1 = Number.MAX_SAFE_INTEGER + 1
-const num2 = Number.MAX_SAFE_INTEGER + 2
-console.log(num1 === num2) // true
-let max: bigint = BigInt(Number.MAX_SAFE_INTEGER)
-console.log(max + BigInt(1) === max + BigInt(2))
-```
+  - 编译前
+
+  <<< @/src/base/1.typescript/2.2.2.ts
+
+  - 编译后
+
+  <<< @/src/base/1.typescript/2.2.2.js
 
 number 类型和 bigInt 类型是不兼容的
 
-## 字符串
+## 3.字符串类型
 
-```ts
-let str: string = "hello"
-```
+- 编译前
 
-- Null
+  <<< @/src/base/1.typescript/2.3.ts
 
-任何类型的子类型，如果`strictNullChecks`的值为 true，则不能把 null 和 undefined 付给其他类型
+- 编译后
 
-```ts
-let name: null | boolean
-name = null
-```
+  <<< @/src/base/1.typescript/2.3.js
 
-- Undefined
+## 4.Null
 
-任何类型的子类型，如果`strictNullChecks`的值为 true，则不能把 null 和 undefined 付给其他类型
+- 编译前
 
-```ts
-let name: null | boolean
-name = boolean
-```
+  <<< @/src/base/1.typescript/2.4.ts
 
-## 2.Object
+- 编译后
 
-```ts
-let obj: { a: number; b: number } = { a: 1, b: 2 }
-```
+  <<< @/src/base/1.typescript/2.4.js
 
-## 3.Array
+## 5.Undefined
 
-### 3.1 固定长度类型
+- 编译前
+
+  <<< @/src/base/1.typescript/2.5.ts
+
+- 编译后
+
+  <<< @/src/base/1.typescript/2.5.js
+
+## 6.Symbol
+
+- 编译前
+
+  <<< @/src/base/1.typescript/2.6.ts
+
+- 编译后
+
+  <<< @/src/base/1.typescript/2.6.js
+
+## 7.Any
+
+- 编译前
+
+  <<< @/src/base/1.typescript/2.7.ts
+
+- 编译后
+
+  <<< @/src/base/1.typescript/2.7.js
+
+## 8.Unknown
+
+- 编译前
+
+  <<< @/src/base/1.typescript/2.8.ts
+
+- 编译后
+
+  <<< @/src/base/1.typescript/2.8.js
+
+## 9.Void
+
+只能接受 null，undefined。一般用于函数的返回值
+
+- 编译前
+
+  <<< @/src/base/1.typescript/2.9.ts
+
+- 编译后
+
+  <<< @/src/base/1.typescript/2.9.js
+
+## 10.Never
+
+任何类型的子类型，never 代表不会出现的值。不能把其他类型赋值给 never
+
+- 编译前
+
+  <<< @/src/base/1.typescript/2.10.ts
+
+- 编译后
+
+  <<< @/src/base/1.typescript/2.10.js
+
+## 11.对象类型
+
+- 编译前
+
+  <<< @/src/base/1.typescript/2.11.ts
+
+- 编译后
+
+  <<< @/src/base/1.typescript/2.11.js
+
+## 12.数组类型
+
+<!-- ### 5.1 固定长度类型
 
 - 元组类型（tuple）：表示已知元素数量和类型的数组
 
@@ -79,7 +149,7 @@ let tuple: [string, number, boolean] = ["hello", 10, true]
 tuple.push("abc") //在元组中增加数据，只能增加元组中存放的类型
 ```
 
-### 3.2 固定类型
+### 5.2 ≈
 
 ```ts
 let arr1: number[] = [1, 2, 3]
@@ -87,7 +157,7 @@ let arr2: string[] = ["1", "2", "3"]
 let arr3: (number | string)[] = [1, "2", 3]
 ```
 
-### 3.3 不定长度类型
+### 5.3 不定长度类型
 
 - 使用泛型方式来声明
 
@@ -97,11 +167,18 @@ let arr: Array<T> = [1, 2, 3]
 
 ```ts
 let arr4: Array<number | string> = [1, "2", 3]
-```
+``` -->
+- 编译前
 
-## 4.Enum
+  <<< @/src/base/1.typescript/2.12.ts
 
-使⽤枚举我们可以定义⼀些带名字的常量
+- 编译后
+
+  <<< @/src/base/1.typescript/2.12.js
+
+## 13.枚举类型
+
+<!-- 使⽤枚举我们可以定义⼀些带名字的常量
 
 ```ts
 enum USER_ROLE {
@@ -133,73 +210,11 @@ const enum USER_ROLE {
   ADMIN,
   MANAGER,
 }
-```
+``` -->
+- 编译前
 
-## 5.Any
+  <<< @/src/base/1.typescript/2.13.ts
 
-不进行类型检测
+- 编译后
 
-```ts
-let arr: any = ["abc", true, { name: "123" }]
-```
-
-## 6.Unknown
-
-```ts
-let value: unknown
-value = true // OK
-value = 42 // OK
-```
-
-## 7.Void
-
-只能接受 null，undefined。一般用于函数的返回值
-
-```ts
-let a: void
-a = undefined
-```
-
-严格模式下不能将`null`赋予给 void
-
-## 8.Never
-
-任何类型的子类型，never 代表不会出现的值。不能把其他类型赋值给 never
-
-```ts
-function error(message: string): never {
-  throw new Error("err")
-}
-function loop(): never {
-  while (true) {}
-}
-function fn(x: number | string) {
-  if (typeof x === "number") {
-  } else if (typeof x === "string") {
-  } else {
-    console.log(x) //never
-  }
-}
-```
-
-## 9.Symbol
-
-Symbol 表示独一无二
-
-```ts
-const s1 = Symbol("key")
-const s2 = Symbol("key")
-console.log(s1 === s2)
-```
-
-## 11.Object
-
-object 表示非原始类型
-
-```ts
-let create = (obj:object):void =>{}
-create(())
-create({})
-create([])
-create(function(){})
-```
+  <<< @/src/base/1.typescript/2.13.js
