--- a/src/base/1.typescript/1.index.md
+++ b/src/base/1.typescript/1.index.md
@@ -12,7 +12,7 @@ meta:
 
 ## 1.环境配置
 
-### 1.1 ts 手动编译
+### 1.1 手动编译
 
 - 安装依赖
 
@@ -26,7 +26,7 @@ npm install -g typescript
 tsc helloworld.ts
 ```
 
-### 1.2 ts 自动编译
+### 1.2 VScode 自动编译
 
 - 1.创建 tsconfig.json 文件 tsc --init 生成配置文件
 - 2.点击 vscode 菜单 任务-运行任务 点击 tsc:监视-tsconfig.json 然后就可以自动生成代码了（mac中：终端-运行任务-typescript）
