--- a/src/base/1.typescript/9.protect.md
+++ b/src/base/1.typescript/9.protect.md
@@ -14,32 +14,48 @@ meta:
 通过判断识别所执行的代码块，自动识别变量属性和方法
 :::
 
-## 1.typeof 类型保护
+## 1.typeof
+
+判断变量类型，对不同类型进行不同的处理
 
 ```ts
-function double(val: number | string) {
+function getDouble(val: number | string) {
   if (typeof val === "number") {
-    val;
+   return val*val
   } else {
-    val;
+   return  Number(val) * Number(val)
   }
 }
 ```
 
-## 2.instanceof 类型保护
+## 2.instanceof
+
+判断实例类型，对不同实例进行不同操作
 
 ```ts
-class Cat {}
-class Dog {}
-const getInstance = (clazz: { new (): Cat | Dog }) => {
-  return new clazz();
-};
-let r = getInstance(Cat);
-if (r instanceof Cat) {
-  r;
-} else {
-  r;
+class Cat {
+  getRes(){
+    console.log('aaa')
+  }
 }
+class Dog {
+   getRes(){
+    console.log('bbb')
+  }
+}
+const getInstance = (fn: { new (): Cat | Dog }) => {
+  return new fn();
+};
+let instance = getInstance(Cat);
+
+function getRes (){
+if (instance instanceof Cat) {
+   return instance.getRes();
+  } else {
+   return instance.getRes();
+  }
+}
+
 ```
 
 ```ts
@@ -64,7 +80,9 @@ if (padder instanceof SpaceRepeatingPadder) {
 }
 ```
 
-## 3.in 类型保护
+## 3.in
+
+通过判断是否在某个类型中，进行不同的处理
 
 ```ts
 interface Fish {
