--- a/src/base/1.typescript/2.base.md
+++ b/src/base/1.typescript/2.base.md
@@ -22,27 +22,27 @@ meta:
 
 ## 2.数值类型
 
-- Number
+数值包括 `number` 类型和 `bigInt` 类型,它们是不兼容的
 
-  - 编译前
+### 2.1 Number
+
+- 编译前
 
   <<< @/src/base/1.typescript/2.2.1.ts
 
-  - 编译后
+- 编译后
 
   <<< @/src/base/1.typescript/2.2.1.js
 
-- BigInt
+### 2.2 BigInt
 
-  - 编译前
+- 编译前
 
   <<< @/src/base/1.typescript/2.2.2.ts
 
-  - 编译后
+- 编译后
 
   <<< @/src/base/1.typescript/2.2.2.js
-
-number 类型和 bigInt 类型是不兼容的
 
 ## 3.字符串类型
 
@@ -95,6 +95,8 @@ number 类型和 bigInt 类型是不兼容的
   <<< @/src/base/1.typescript/2.7.js
 
 ## 8.Unknown
+
+不能访问`unknown`类型上的属性，不能作为函数、类来使用
 
 - 编译前
 
