--- a/src/base/1.typescript/13.builtin.md
+++ b/src/base/1.typescript/13.builtin.md
@@ -10,22 +10,50 @@ meta:
 
 # 十三.内置类型
 
-## 1.Partial 转化可选属性
+## 1.Partial
+
+将定义的类型属性转化为可选属性
+
+### 1.1 案例
 
 ```ts
-interface Company {
-  num: number;
-}
-interface Person {
+interface PersonType {
   name: string;
   age: string;
-  company: Company;
+  phone: string;
 }
-// type Partial<T> = {[K in keyof T]?:T[K]}实现原理
-type PartialPerson = Partial<Person>;
+// type PartialPersonType = Partial<Person>;
+// {
+//   name?: string;
+//   age?: string;
+//   phone?: string;
+// }
+
+const person: PersonType = {
+    name:'xiaoming',
+    age:'14',
+    phone:'18232323232323'
+}
+
+const student:Partial<PersonType> = {
+    name:'xiaoming',
+    age:'14',
+}
+
+const body:Partial<PersonType> = {
+    name:'xiaoming',
+}
 ```
 
+### 1.2 实现原理
+
 遍历所有的属性将属性设置为可选属性，但是无法实现深度转化
+
+```ts
+type Partial<T> = {[K in keyof T]?:T[K]}
+```
+
+实现深度转化，如果值时对象继续深度转化
 
 ```ts
 type DeepPartial<T> = {
@@ -34,27 +62,60 @@ type DeepPartial<T> = {
 type DeepPartialPerson = DeepPartial<Person>;
 ```
 
-我们可以实现深度转化，如果值时对象继续深度转化
+## 2.Required
 
-## 2.Required 转化必填属性
+将定义的类型属性转化为必填属性
+
+### 2.1 案例
 
 ```ts
-interface Company {
-  num: number;
-}
-interface Person {
+interface PersonType {
   name: string;
-  age: string;
-  company: Company;
+  age?: string;
+  phone?: string;
 }
-type PartialPerson = Partial<Person>;
-type Required<T> = { [K in keyof T]-?: T[K] };
-type RequiredPerson = Required<PartialPerson>;
+// type RequiredPersonType = Required<Person>;
+// {
+//   name: string;
+//   age: string;
+//   phone: string;
+// }
+
+const student:PersonType = {
+    name:'xiaoming',
+    age:'14',
+}
+
+const body:PersonType = {
+    name:'xiaoming',
+}
+
+const person: Required<PersonType> = {
+    name:'xiaoming',
+    age:'14',
+    phone:'18232323232323'
+}
 ```
 
-将所有的属性转化为必填属性
+### 2.2 实现原理
 
-## 3.Readonly 转化仅读属性
+遍历所有的属性将所有的属性转化为必填属性
+
+```ts
+type Required<T> = { [K in keyof T]-?: T[K] };
+```
+
+实现深度转化，如果值时对象继续深度转化
+
+```ts
+type DeepRequired<T> = {
+  [K in keyof T]-?: T[K] extends object ? DeepRequired<T[K]> : T[K];
+};
+```
+
+## 3.Readonly
+
+对已定义的类型中转化仅读属性
 
 ```ts
 type Readonly<T> = { readonly [K in keyof T]: T[K] };
@@ -63,7 +124,9 @@ type RequiredPerson = Readonly<Person>;
 
 将所有属性变为仅读属性
 
-## 4.Pick 挑选所需的属性
+## 4.Pick
+
+对已定义的类型中挑选所需的属性
 
 ```ts
 type Pick<T, U extends keyof T> = { [P in U]: T[P] };
@@ -72,7 +135,9 @@ type PickPerson = Pick<Person, "name" | "age">;
 
 在已有类型中挑选所需属性
 
-## 5.Record 记录类型
+## 5.Record
+
+对已定义的类型中记录类型
 
 ```ts
 type Record<K extends keyof any, T> = { [P in K]: T };
@@ -94,7 +159,9 @@ const r = map({name:'abc',age:11},(item,key)=>{
 })
 ```
 
-## 6.Omit 忽略属性
+## 6.Omit
+
+对已定义的类型中忽略某些属性
 
 ```ts
 let person = {
