--- a/src/base/1.typescript/16.unknown.md
+++ b/src/base/1.typescript/16.unknown.md
@@ -8,5 +8,10 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 十六.其他
+# 十六.属性
 
+## 可选属性`?`
+
+## 任意属性`[key:string]`
+
+## 只读属性`readOnly`
