--- a/src/base/1.typescript/15.custom.md
+++ b/src/base/1.typescript/15.custom.md
@@ -8,11 +8,11 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 十五.自定义类型
+# 十五.自定义集合操作
 
-## 1.Diff 实现
+## 1.Diff
 
-求两个对象不同的部分
+类型的补集
 
 ```ts
 let person1 = {
@@ -23,11 +23,19 @@ let person1 = {
 let person2 = {
   adresss: "dddd",
 };
-type Diff<T extends object, K extends Object> = Omit<T, keyof K>;
+
 type DiffPerson = Diff<typeof person1, typeof person2>;
 ```
 
-## 2.InterSection 交集
+- 实现原理
+
+```ts
+type Diff<T extends object, K extends Object> = Omit<T, keyof K>;
+```
+
+## 2.InterSection
+
+类型的交集
 
 ```ts
 let person1 = {
@@ -45,7 +53,9 @@ type InterSection<T extends object, K extends object> = Pick<
 type InterSectionPerson = InterSection<typeof person1, typeof Person2>;
 ```
 
-## 3.Overwrite 属性覆盖
+## 3.Overwrite
+
+类型的补集
 
 ```ts
 type OldProps = { name: string; age: number; visible: boolean };
@@ -64,14 +74,32 @@ type Overwrite<
 type ReplaceProps = Overwrite<OldProps, NewProps>;
 ```
 
+- 自定义
+
+```ts
+type Overwrite<T, U> = Pick<T, Exclude<keyof T, keyof U>> & U;
+```
+
+```ts
+type HexColorLine = Overwrite<Line, { color: number }>
+```
+
+- 使用其他
+
+```ts
+type HexColorLine = Omit<Line, 'color'> & {
+  color: number;
+}
+```
+
 如果存在已有属性则使用新属性类型进行覆盖操作
 
-## 4.Merge 对象合并
+## 4.Merge
+
+类型的并集
 
 ```ts
 type Compute<A extends any> = { [K in keyof A]: A[K] };
 type Merge<T, K> = Compute<Omit<T, keyof K> & K>;
 type MergeObj = Merge<OldProps, NewProps>;
 ```
-
-将两个对象类型进行合并操作
