--- a/src/base/1.typescript/11.overlapping.md
+++ b/src/base/1.typescript/11.overlapping.md
@@ -11,9 +11,13 @@ meta:
 # 十一.交叉类型
 
 ::: tip 前言
-交叉类型是将多个类型合并为一个类型
+符号是 & ，代表了按位或，需要符合这里的所有类型，才可以说实现了这个交叉类型，即 A & B ，需要同时满足 A 与 B 两个类型才行
 :::
 
+## 1.案例
+
+- 1.不同属性
+  
 ```ts
 interface Person1 {
   handsome: string;
@@ -24,8 +28,12 @@ interface Person2 {
 type P1P2 = Person1 & Person2;
 let p: P1P2 = { handsome: "帅", high: "高" };
 ```
+- 2.相同属性
+  
+- 3.属性对象
 
-- 交叉类型
+  
+## 2.实现
 
 ```ts
 function mixin<T, K>(a: T, b: K): T & K {
