--- a/src/base/1.typescript/11.overlapping.md
+++ b/src/base/1.typescript/11.overlapping.md
@@ -11,7 +11,7 @@ meta:
 # 十一.交叉类型
 
 ::: tip 前言
-符号是 & ，代表了按位或，需要符合这里的所有类型，才可以说实现了这个交叉类型，即 A & B ，需要同时满足 A 与 B 两个类型才行
+符号是 & ，代表了类型合并，需要符合这里的所有类型，才可以说实现了这个交叉类型，即 A & B ，需要同时满足 A 与 B 两个类型才行
 :::
 
 ## 1.案例
