--- a/src/base/1.typescript/1.env.md
+++ b/src/base/1.typescript/1.env.md
@@ -279,3 +279,10 @@ document.addEventListener("click", (event: MouseEvent) => {
         "wbr": HTMLElement;
 }
 ```
+- 案例
+```ts
+const input = (event: InputEvent) => {
+    const target = event.target as EventTarget
+    inputValue.value = (target as HTMLInputElement).value
+}
+```
