--- a/src/base/2.config/1.config.md
+++ b/src/base/2.config/1.config.md
@@ -8,4 +8,16 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 一
+# 一.报错
+
+## 1.TS2345
+
+- `TS2345: Argument of type 'typeof import("/xxx/node_modules/vue/dist/vue")' is not assignable to parameter of type 'Component<any, any, any, ComputedOptions, MethodOptions, {}, any>'.`
+
+```ts
+declare module "*.vue" {
+  import type { DefineComponent } from "vue"
+  const component: DefineComponent<{}, {}, any>
+  export default component
+}
+```
