--- a/src/base/1.api/3.deduction.md
+++ b/src/base/1.api/3.deduction.md
@@ -39,7 +39,11 @@ let bool3: Booolen = new Boolean(2);
 
 boolean 是基本数据类型，Boolean 是他的封装类
 
-## 3.联合类型
+## 3.联合类型（｜）
+
+在TS中，联合类型表示：一个值可以是多种类型之一，使用逻辑“或”（ | ）运算符来分隔多个类型。
+
+一个联合类型的变量，在使用时可以是多个类型中的任意一种。
 
 在使用联合类型时，没有赋值只能访问联合类型中共有的方法和属性
 
@@ -58,7 +62,9 @@ console.log(name!.toLowerCase()); //字符串方法
 let ele: HTMLElement | null = document.getElementById("#app");
 ele!.style.color = "red"; // 断定ele元素一定有值
 ```
-
+### 3.1 基础联合类型
+### 3.2 对象联合类型
+### 3.3 字面量联合类型
 ## 4.类型断⾔
 
 - “尖括号” 语法
