--- a/src/base/1.api/2.base.md
+++ b/src/base/1.api/2.base.md
@@ -14,11 +14,11 @@ meta:
 
 - 编译前
 
-<<< @/src/base/1.typescript/2.1.ts
+<<< @/src/base/1.api/2.1.ts
 
 - 编译后
 
-<<< @/src/base/1.typescript/2.1.js
+<<< @/src/base/1.api/2.1.js
 
 ## 2.数值类型
 
@@ -28,71 +28,71 @@ meta:
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.2.1.ts
+  <<< @/src/base/1.api/2.2.1.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.2.1.js
+  <<< @/src/base/1.api/2.2.1.js
 
 ### 2.2 BigInt
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.2.2.ts
+  <<< @/src/base/1.api/2.2.2.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.2.2.js
+  <<< @/src/base/1.api/2.2.2.js
 
 ## 3.字符串类型
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.3.ts
+  <<< @/src/base/1.api/2.3.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.3.js
+  <<< @/src/base/1.api/2.3.js
 
 ## 4.Null
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.4.ts
+  <<< @/src/base/1.api/2.4.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.4.js
+  <<< @/src/base/1.api/2.4.js
 
 ## 5.Undefined
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.5.ts
+  <<< @/src/base/1.api/2.5.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.5.js
+  <<< @/src/base/1.api/2.5.js
 
 ## 6.Symbol
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.6.ts
+  <<< @/src/base/1.api/2.6.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.6.js
+  <<< @/src/base/1.api/2.6.js
 
 ## 7.Any
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.7.ts
+  <<< @/src/base/1.api/2.7.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.7.js
+  <<< @/src/base/1.api/2.7.js
 
 ## 8.Unknown
 
@@ -100,11 +100,11 @@ meta:
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.8.ts
+  <<< @/src/base/1.api/2.8.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.8.js
+  <<< @/src/base/1.api/2.8.js
 
 ## 9.Void
 
@@ -112,11 +112,11 @@ meta:
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.9.ts
+  <<< @/src/base/1.api/2.9.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.9.js
+  <<< @/src/base/1.api/2.9.js
 
 ## 10.Never
 
@@ -124,21 +124,21 @@ meta:
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.10.ts
+  <<< @/src/base/1.api/2.10.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.10.js
+  <<< @/src/base/1.api/2.10.js
 
 ## 11.对象类型
 
 - 编译前
 
-  <<< @/src/base/1.typescript/2.11.ts
+  <<< @/src/base/1.api/2.11.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.11.js
+  <<< @/src/base/1.api/2.11.js
 
 ## 12.数组类型
 
@@ -172,11 +172,11 @@ let arr4: Array<number | string> = [1, "2", 3]
 ``` -->
 - 编译前
 
-  <<< @/src/base/1.typescript/2.12.ts
+  <<< @/src/base/1.api/2.12.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.12.js
+  <<< @/src/base/1.api/2.12.js
 
 ## 13.枚举类型
 
@@ -215,8 +215,8 @@ const enum USER_ROLE {
 ``` -->
 - 编译前
 
-  <<< @/src/base/1.typescript/2.13.ts
+  <<< @/src/base/1.api/2.13.ts
 
 - 编译后
 
-  <<< @/src/base/1.typescript/2.13.js
+  <<< @/src/base/1.api/2.13.js
