--- a/src/base/2.config/1.config.md
+++ b/src/base/2.config/1.config.md
@@ -21,3 +21,12 @@ declare module "*.vue" {
   export default component
 }
 ```
+## 2.ts7006
+- `参数“Vue”隐式具有“any”类型。ts(7006)`
+···ts
+declare module '*.vue' {
+    import { ComponentOptions } from 'vue'
+    const componentOptions: ComponentOptions
+    export default componentOptions
+}
+···
