--- a/src/base/2.config/2.webpack.md
+++ b/src/base/2.config/2.webpack.md
@@ -8,4 +8,6 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 二
+# 二.注释
+## 1.@ts-ignore
+`// @ts-ignore 一个特殊的注释，用于告诉TypeScript编译器，忽略某个特定的错误或警告`
