--- a/src/base/1.api/2.base.md
+++ b/src/base/1.api/2.base.md
@@ -131,6 +131,14 @@ meta:
   <<< @/src/base/1.api/2.10.js
 
 ## 11.对象类型
+```js
+type obj = {
+  [x: string]: any
+}
+```
+```js
+type obj = Record<string, any>
+```
 
 - 编译前
 
