--- a/src/senior/use/2.extend.md
+++ b/src/senior/use/2.extend.md
@@ -8,4 +8,10 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-#
+# ref
+## 1.定义为空时不报错
+```ts
+ const data = ref<TsType>(
+        {} as TsType
+    )
+```
