--- a/src/senior/use/1.index.md
+++ b/src/senior/use/1.index.md
@@ -8,4 +8,12 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-#
+# slot
+## 1.slot类型定义
+```ts
+defineSlots<{
+    root: (props: { row: NodeType; handleExpand: () => void; expand: boolean; loading: boolean }) => void
+    branch: (props: { row: NodeType; handleExpand: () => void; expand: boolean; loading: boolean }) => void
+    leaf: (props: { row: NodeType }) => void
+}>()
+```
