--- a/src/senior/use/3.componentCommunication.md
+++ b/src/senior/use/3.componentCommunication.md
@@ -8,4 +8,20 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-#
+# props
+## 复杂类型
+```ts
+{
+        type: Array as () => (number | string)[],
+        default: () => []
+    }
+```
+```ts
+{
+        type: Object as () => Node,
+        require: true,
+        validator(items: Node) {
+            return JSON.stringify(items) != '{}'
+        }
+    },
+```
