--- a/src/base/1.api/17.module.md
+++ b/src/base/1.api/17.module.md
@@ -30,9 +30,10 @@ import name from './a'
 
 命名空间可以用于组织代码，避免文件内命名冲突
 
-- 命名空间的使用
-
+### 2.1 使用
+- 在需要使用得地方放入
 ```ts
+// type.d.ts
 export namespace zoo {
   export class Dog {
     eat() {
@@ -54,7 +55,7 @@ let dog_of_home = new home.Dog()
 dog_of_home.eat()
 ```
 
-- 命名空间嵌套使用
+### 2.2 间嵌套使用
 
 ```ts
 export namespace zoo {
