--- a/src/base/1.api/14.package.md
+++ b/src/base/1.api/14.package.md
@@ -41,6 +41,33 @@ let proxpProps = proxify(props);
 ```
 
 ## 2.拆包
+对于 Readonly，Partial 和 Pick 的映射类型, 我们可以对映射之后的类型进行拆包。
+还原映射之前的类型, 这种操作我们称之为拆包。
+
+```ts
+interface TestInterface {
+    name: string;
+    age: number;
+}
+
+// 增加只读和可选属性
+type TestType<T> = {
+    +readonly [P in keyof T]+?: T[P];
+}
+
+type test = TestType<TestInterface>;
+//type test = {
+//    readonly name?: string;
+//    readonly age?: number;
+//}
+
+// 删除只读和可选属性
+type UnMyType<T> = {
+    -readonly [P in keyof T]-?: T[P];
+}
+
+type test2 = UnMyType<test>;
+```
 
 ```ts
 function unProxify<T>(proxpProps: Proxify<T>): T {
