--- a/src/base/1.api/12.condition.md
+++ b/src/base/1.api/12.condition.md
@@ -53,25 +53,49 @@ type c = c1 | c2;
 
 ## 3.内置条件类型
 
-- 1.`Exclude`排除类型
+- 1.`Exclude`排除类型:从T中剔除U的类型
 
 ```ts
-type Exclude<T, U> = T extends U ? never : T;
+type type3 = Exclude<string | number | boolean, undefined | number >
 type MyExclude = Exclude<"1" | "2" | "3", "1" | "2">;
 ```
-
-- 2.`Extract`抽取类型
-
+原理
 ```ts
-type Extract<T, U> = T extends U ? T : never;
-type MyExtract = Extract<"1" | "2" | "3", "1" | "2">;
+type Exclude<T, U> = T extends U ? never : T;
 ```
 
-- 3.`NoNulllable`非空检测
+- 2.`Extract`抽取类型:提取 T 中可以赋值给 U 的类型
 
 ```ts
-type NonNulllable<T> = T extends null | undefined ? never : T;
+type res = Extract<string | number | boolean, number | string> //type res = string | number
+type res1 = Extract<string | boolean, number | string> //type res1 = string
+type MyExtract = Extract<"1" | "2" | "3", "1" | "2">;
+```
+原理
+```ts
+type Extract<T, U> = T extends U ? T : never;
+```
+- 3.`NoNulllable`非空检测:从T中去掉null和undefined
+
+```ts
+type type9 = NonNullable<string | number | null | undefined>   //type type9 = string | number
 type MyNone = NonNulllable<"a" | null | undefined>;
+```
+原理
+```ts
+type NonNulllable<T> = T extends null | undefined ? never : T;
+```
+- 4.`ReturnType`:获取函数返回值类型
+
+```ts
+type type10 = ReturnType<()=> string>  //type type10 = string
+```
+
+- 5.`Parameters`:获得函数的参数类型组成的元组类型
+
+```ts
+function say(name: string, age: number, gender: boolean) {}
+type res = Parameters<typeof say>;  //type res = [name: string, age: number, gender: boolean]
 ```
 
 ## 4.infer 类型推断
