--- a/src/base/1.api/13.builtin.md
+++ b/src/base/1.api/13.builtin.md
@@ -8,7 +8,13 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 十三.内置类型
+# 十三.映射类型
+
+::: tip 前言
+
+根据旧的类型创建出新的类型, 我们称之为映射类型
+
+:::
 
 ## 1.Partial
 
