--- a/src/base/1.api/2.base.md
+++ b/src/base/1.api/2.base.md
@@ -131,13 +131,22 @@ meta:
   <<< @/src/base/1.api/2.10.js
 
 ## 11.对象类型
-```js
+```ts
 type obj = {
   [x: string]: any
 }
 ```
-```js
+```ts
 type obj = Record<string, any>
+```
+```ts
+interface Objs<T> {
+    [key: string]:T
+}
+
+const objs:Objs<number> = {
+    age: 18
+}
 ```
 
 - 编译前
