--- a/src/base/3.react/3.gitlab.md
+++ b/src/base/3.react/3.gitlab.md
@@ -9,3 +9,18 @@ meta:
 ---
 
 # vue + vite
+
+# 1.tsconfig.json
+```ts
+{
+  "files": [],
+  "references": [
+    {
+      "path": "./tsconfig.node.json"
+    },
+    {
+      "path": "./tsconfig.app.json"
+    }
+  ]
+}
+```
