--- a/src/base/1.api/14.package.md
+++ b/src/base/1.api/14.package.md
@@ -10,6 +10,10 @@ meta:
 
 # 十四.装包和拆包
 
+::: tip 前言
+
+:::
+
 ## 1.装包
 
 ```ts
@@ -41,6 +45,7 @@ let proxpProps = proxify(props);
 ```
 
 ## 2.拆包
+
 对于 Readonly，Partial 和 Pick 的映射类型, 我们可以对映射之后的类型进行拆包。
 还原映射之前的类型, 这种操作我们称之为拆包。
 
