--- a/src/base/1.api/2.base.md
+++ b/src/base/1.api/2.base.md
@@ -10,6 +10,10 @@ meta:
 
 # 二.基础类型
 
+::: tip 前言
+
+:::
+
 ## 1.布尔类型
 
 - 编译前
@@ -131,14 +135,17 @@ meta:
   <<< @/src/base/1.api/2.10.js
 
 ## 11.对象类型
+
 ```ts
 type obj = {
   [x: string]: any
 }
 ```
+
 ```ts
 type obj = Record<string, any>
 ```
+
 ```ts
 interface Objs<T> {
     [key: string]:T
