--- a/src/base/1.api/3.deduction.md
+++ b/src/base/1.api/3.deduction.md
@@ -10,6 +10,10 @@ meta:
 
 # 三.类型推导
 
+::: tip 前言
+
+:::
+
 ## 1.类型推导
 
 - 声明变量没有赋予值时默认变量是`any`类型
@@ -62,9 +66,13 @@ console.log(name!.toLowerCase()); //字符串方法
 let ele: HTMLElement | null = document.getElementById("#app");
 ele!.style.color = "red"; // 断定ele元素一定有值
 ```
+
 ### 3.1 基础联合类型
+
 ### 3.2 对象联合类型
+
 ### 3.3 字面量联合类型
+
 ## 4.类型断⾔
 
 - “尖括号” 语法
