--- a/src/base/2.config/1.config.md
+++ b/src/base/2.config/1.config.md
@@ -10,6 +10,10 @@ meta:
 
 # 一.报错
 
+::: tip 前言
+
+:::
+
 ## 1.TS2345
 
 - `TS2345: Argument of type 'typeof import("/xxx/node_modules/vue/dist/vue")' is not assignable to parameter of type 'Component<any, any, any, ComputedOptions, MethodOptions, {}, any>'.`
@@ -21,7 +25,9 @@ declare module "*.vue" {
   export default component
 }
 ```
+
 ## 2.ts7006
+
 - `参数“Vue”隐式具有“any”类型。ts(7006)`
 
 ```ts
