--- a/src/base/2.config/1.index.md
+++ b/src/base/2.config/1.index.md
@@ -10,7 +10,12 @@ meta:
 
 # 配置
 
+::: tip 前言
+
+:::
+
 ## compilerOptions
+
 ```json
 "compilerOptions": {
   "incremental": true, // TS编译器在第一次编译之后会生成一个存储编译信息的文件，第二次编译会在第一次的基础上进行增量编译，可以提高编译的速度
