--- a/src/senior/use/3.componentCommunication.md
+++ b/src/senior/use/3.componentCommunication.md
@@ -9,13 +9,20 @@ meta:
 ---
 
 # props
+
+::: tip 前言
+
+:::
+
 ## 复杂类型
+
 ```ts
 {
         type: Array as () => (number | string)[],
         default: () => []
     }
 ```
+
 ```ts
 {
         type: Object as () => Node,
