--- a/src/base/1.api/18.statement.md
+++ b/src/base/1.api/18.statement.md
@@ -11,11 +11,19 @@ meta:
 # 十八.类型声明
 
 ::: tip 前言
-
+declare关键字用来告诉编译器，某个类型是存在的，可以在当前文件中使用
 :::
 
 ## 1.声明全局变量
-
+- declare var 名称： 变量
+- declare const / let 名称： ES6变量
+- declare function 名称： 方法
+- declare class 名称： 类
+- declare enum 名称： 枚举
+- declare module 名称： 模块
+- declare namespace 名称： 命名空间
+- declare interface 名称： 接口
+- declare type 名称： 类型别名
 ### 1.1 普通类型声明
 
 - xxx.d.ts
