--- a/src/senior/use/7.checkBox.md
+++ b/src/senior/use/7.checkBox.md
@@ -8,8 +8,15 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 5
+# vue-router
 
 ::: tip 前言
 
 :::
+
+# 1.类型
+```ts
+import type { RouteRecordRaw } from 'vue-router';
+...
+export const routes: RouteRecordRaw[] =[]
+```
