--- a/src/base/1.api/17.module.md
+++ b/src/base/1.api/17.module.md
@@ -11,7 +11,8 @@ meta:
 # 十七.模块和命名空间
 
 ::: tip 前言
-默认情况下，我们编写的大门处于全局命名空间中
+- 命名空间（Namespace）用于组织和封装相关的代码，以避免全局命名冲突，并提供更好的代码结构和模块化。
+- 模块可以将相关的功能分组到独立的单元中，具有更好的可维护性、可复用性和可测试性。
 :::
 
 ## 1.模块
