--- a/src/senior/vue/11.tsx.md
+++ b/src/senior/vue/11.tsx.md
@@ -8,12 +8,8 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 组件
+# tsx
 
 ::: tip 前言
 
 :::
-
-```ts
-import type { App } from 'vue'
-```
