--- a/src/base/1.api/17.module.md
+++ b/src/base/1.api/17.module.md
@@ -11,6 +11,7 @@ meta:
 # 十七.模块和命名空间
 
 ::: tip 前言
+
 - 命名空间（Namespace）用于组织和封装相关的代码，以避免全局命名冲突，并提供更好的代码结构和模块化。
 - 模块可以将相关的功能分组到独立的单元中，具有更好的可维护性、可复用性和可测试性。
 :::
@@ -32,7 +33,9 @@ import name from './a'
 命名空间可以用于组织代码，避免文件内命名冲突
 
 ### 2.1 使用
+
 - 在需要使用得地方放入
+
 ```ts
 // type.d.ts
 export namespace zoo {
@@ -71,3 +74,48 @@ console.log(zoo.bear.name)
 ```
 
 命名空间中导出的变量可以通过命名空间使用
+
+## 3.案例
+
+### 3.1 接口
+
+```ts
+interface IPageData<T = any> {
+  data: T[]
+}
+
+interface IResponseData<T = any> {
+  msg: string
+  result: T
+}
+// 搜索
+export declare namespace TextSearchType {
+  interface RequestParams {
+    pageSize: string
+    currentPage: string
+    id: string
+    name?: string
+    description?: string
+  }
+  interface ResponseData extends IResponseData<IPageData<T>> {
+    msg?: string
+  }
+}
+```
+
+### 3.2 类型
+
+```ts
+// 编辑
+export declare namespace NftEditType {
+  type Params1 = {
+    id: string
+    name: string
+  }
+  type Params2 = {
+    id: string
+    code?: string
+  }
+  type RequestParams = Params1 & Params2
+}
+```
