--- a/src/senior/vue/5.component.md
+++ b/src/senior/vue/5.component.md
@@ -8,4 +8,12 @@ meta:
     content: vuepress,最新技术文档,vuepress语法,markdown语法
 ---
 
-# 配置文件
+# component
+
+::: tip 前言
+
+:::
+
+```ts
+import type { App } from 'vue'
+```
