--- a/src/base/1.api/2.base.md
+++ b/src/base/1.api/2.base.md
@@ -12,6 +12,8 @@ meta:
 
 ::: tip 前言
 
+常见的基础类型总结
+
 :::
 
 ## 1.布尔类型
@@ -166,34 +168,8 @@ const objs:Objs<number> = {
 
 ## 12.数组类型
 
-<!-- ### 5.1 固定长度类型
+### 12.1 元组类型(固定长度)
 
-- 元组类型（tuple）：表示已知元素数量和类型的数组
-
-```ts
-let tuple: [string, number, boolean] = ["hello", 10, true]
-tuple.push("abc") //在元组中增加数据，只能增加元组中存放的类型
-```
-
-### 5.2 ≈
-
-```ts
-let arr1: number[] = [1, 2, 3]
-let arr2: string[] = ["1", "2", "3"]
-let arr3: (number | string)[] = [1, "2", 3]
-```
-
-### 5.3 不定长度类型
-
-- 使用泛型方式来声明
-
-```ts
-let arr: Array<T> = [1, 2, 3]
-```
-
-```ts
-let arr4: Array<number | string> = [1, "2", 3]
-``` -->
 - 编译前
 
   <<< @/src/base/1.api/2.12.ts
@@ -202,41 +178,8 @@ let arr4: Array<number | string> = [1, "2", 3]
 
   <<< @/src/base/1.api/2.12.js
 
-## 13.枚举类型
+### 12.2 不定长度
 
-<!-- 使⽤枚举我们可以定义⼀些带名字的常量
-
-```ts
-enum USER_ROLE {
-  USER, // 默认从0开始
-  ADMIN,
-  MANAGER,
-}
-// {0: "USER", 1: "ADMIN", 2: "MANAGER", USER: 0, ADMIN: 1, MANAGER: 2}
-```
-
-数字枚举除了⽀持 从成员名称到成员值 的普通映射之外，它还⽀持 从成员值到成员名称 的反向映射
-
-- 异构枚举
-  异构枚举的成员值是数字和字符串的混合
-
-```ts
-enum USER_ROLE {
-  USER = "user",
-  ADMIN = 1,
-  MANAGER,
-}
-```
-
-- 常量枚举
-
-```ts
-const enum USER_ROLE {
-  USER,
-  ADMIN,
-  MANAGER,
-}
-``` -->
 - 编译前
 
   <<< @/src/base/1.api/2.13.ts
@@ -244,3 +187,13 @@ const enum USER_ROLE {
 - 编译后
 
   <<< @/src/base/1.api/2.13.js
+
+## 13.枚举类型
+
+- 编译前
+
+  <<< @/src/base/1.api/2.14.ts
+
+- 编译后
+
+  <<< @/src/base/1.api/2.14.js
