--- a/src/base/1.api/3.deduction.md
+++ b/src/base/1.api/3.deduction.md
@@ -12,6 +12,8 @@ meta:
 
 ::: tip 前言
 
+通过赋值的变量反推其类型
+
 :::
 
 ## 1.类型推导
@@ -112,8 +114,7 @@ function myFunc(numGenerator: NumGenerator | undefined) {
 }
 ```
 
-⾮空断⾔操作符会从编译⽣成的 JavaScript 代码中移除，所以在实际使⽤的过程中，要特别注
-意
+⾮空断⾔操作符会从编译⽣成的 JavaScript 代码中移除，所以在实际使⽤的过程中，要特别注意
 
 ```js
 const a: number | undefined = undefined;
