--- a/src/base/1.api/4.type.md
+++ b/src/base/1.api/4.type.md
@@ -12,11 +12,13 @@ meta:
 
 ::: tip 前言
 
+函数相关类型的定义
+
 :::
 
-## 1.函数的两种声明方式
+## 1.声明方式
 
-- 通过 `function` 关键字来进行声明
+- 直接声明
 
 ```ts
 function sum(a: string, b: string): string {
@@ -25,13 +27,22 @@ function sum(a: string, b: string): string {
 sum("a", "b");
 ```
 
-可以用来限制函数的参数和返回值类型
-
-- 通过`表达式`方式声明
+- `type`方式声明
 
 ```ts
 type Sum = (a1: string, b1: string) => string;
 let sum: Sum = (a: string, b: string) => {
+  return a + b;
+};
+```
+
+- `interface`方式声明
+
+```ts
+interface Sum {
+  (a: string, b: string): string
+}
+let sum: Sum = (a, b) => {
   return a + b;
 };
 ```
