--- a/src/base/1.api/5.class.md
+++ b/src/base/1.api/5.class.md
@@ -28,7 +28,7 @@ class Pointer {
 let p = new Pointer(100, 200);
 ```
 
-实例上的属性需要先声明在使用，构造函数中的参数可以使用可选参数和剩余参数
+实例上的属性需要先声明再使用，构造函数中的参数可以使用可选参数和剩余参数
 
 ## 2.类中的修饰符
 
