--- a/src/base/1.api/1.env.md
+++ b/src/base/1.api/1.env.md
@@ -11,7 +11,7 @@ meta:
 # 一.内置对象
 
 ::: tip 前言
-
+ 内置对象可以直接使用，不用引入后使用
 :::
 
 ## 1.ECMAScript 的内置对象
@@ -39,6 +39,29 @@ console.log(pattern.test(text)) // false
 
 //Error 对象用于表示在运行时发生的错误
 let e: Error = new Error("Error occurred")
+```
+
+### setTimeout
+
+- 方式一
+
+```sh
+npm i @types/node
+```
+
+.eslintrc.js
+
+```js
+globals:{
+  NodeJS:'readonly'
+}
+```
+
+- 方式二
+
+```ts
+let timer:number;
+timer = window.setTimeout(fn,time)
 ```
 
 ## 2.BOM 内置对象
