--- a/src/base/1.api/4.type.md
+++ b/src/base/1.api/4.type.md
@@ -92,3 +92,11 @@ function toArray(value: number | string) {
 toArray(123);
 toArray("123");
 ```
+
+## 6.默认值
+
+```ts
+const add = (x=1: number,y=2:number): number => {
+  return x+y;
+};
+```
