--- a/src/base/1.api/1.index.md
+++ b/src/base/1.api/1.index.md
@@ -33,7 +33,12 @@ tsc helloworld.ts
 ### 1.2 VScode 自动编译
 
 - 1.创建 tsconfig.json 文件 tsc --init 生成配置文件
-- 2.点击 vscode 菜单 任务-运行任务 点击 tsc:监视-tsconfig.json 然后就可以自动生成代码了（mac中：终端-运行任务-typescript）
+- 2.点击 vscode 菜单 任务-运行任务 点击 tsc:监视-tsconfig.json 然后就可以自动生成代码了
+
+> **在mac中：终端-运行任务-typescript**
+
+![alt text](./image.png)
+![alt text](./image-1.png)
 
 ### 1.3 hbuilder 中
 
