--- a/src/base/1.api/19.extend.md
+++ b/src/base/1.api/19.extend.md
@@ -22,16 +22,11 @@ meta:
 
 可以直接使用接口对已有的类型进行扩展
 
-### 1.1 String
+### 1.1 String 扩展
 
-- 定义类型
+- `global.d.ts` 定义全局类型
 
-```ts
-// global.d.ts
-interface String {
-  double(): string
-}
-```
+<<< @/src/base/1.api/19.1.d.ts
 
 - 扩展原型方法
 
@@ -48,16 +43,11 @@ let str: string = "abc"
 str.double()
 ```
 
-### 1.2 window
+### 1.2 window 扩展
 
-- 定义类型
+- `global.d.ts` 定义全局类型
 
-```ts
-// global.d.ts
-interface Window {
-  myname: string
-}
-```
+<<< @/src/base/1.api/19.2.d.ts
 
 - 扩展属性
 
@@ -73,18 +63,13 @@ console.log(window.myname)
 
 ## 2.模块内全局扩展
 
-```ts
-declare global {
-  interface String {
-    double(): string
-  }
-  interface Window {
-    myname: string
-  }
-}
-```
+全局变量可以通过 declare global 声明
 
-声明全局表示对全局进行扩展
+- `test.ts`
+
+<<< @/src/base/1.api/19.3.ts
+
+<<< @/src/base/1.api/19.3.js
 
 ## 3.声明合并
 
@@ -92,58 +77,30 @@ declare global {
 
 ### 1.同名接口合并
 
-```ts
-interface Animal {
-  name: string
-}
-interface Animal {
-  age: number
-}
-let a: Animal = { name: "abcd", age: 10 }
-```
+<<< @/src/base/1.api/19.4.ts
+<<< @/src/base/1.api/19.4.js
 
 ### 3.命名空间的合并
 
 - 扩展类
 
-```ts
-class Form {}
-namespace Form {
-  export const type = "form"
-}
-```
+<<< @/src/base/1.api/19.5.ts
+<<< @/src/base/1.api/19.5.js
 
 - 扩展方法
 
-```ts
-function getName() {}
-namespace getName {
-  export const type = "form"
-}
-```
+<<< @/src/base/1.api/19.6.ts
+<<< @/src/base/1.api/19.6.js
 
 - 扩展枚举类型
 
-```ts
-enum Seasons {
-  Spring = "Spring",
-  Summer = "Summer",
-}
-namespace Seasons {
-  export let Autum = "Autum"
-  export let Winter = "Winter"
-}
-```
+<<< @/src/base/1.api/19.7.ts
+<<< @/src/base/1.api/19.7.js
 
 ### 3.交叉类型合并
 
-```ts
-import { createStore, Store } from "redux"
-type StoreWithExt = Store & {
-  ext: string
-}
-let store: StoreWithExt
-```
+<<< @/src/base/1.api/19.8.ts
+<<< @/src/base/1.api/19.8.js
 
 ## 4.生成声明文件
 
